B-75591 FDA: ACLCI usage editing: implement service logic to update usages